--- a/.github/workflows/retrigger_workflows.yml
+++ b/.github/workflows/retrigger_workflows.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: tiagobento/retrigger-workflows-on-open-prs@master
+      - uses: vanstinator/re-run-open-prs-on-base-update@v1
         with:
           github_token: ${{ secrets.gentx }}
+          skip_failed_runs: false
