--- a/.github/workflows/retrigger_workflows.yml
+++ b/.github/workflows/retrigger_workflows.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: vanstinator/re-run-open-prs-on-base-update@v1.2.0
+      - uses: jolube/retrigger-workflows-on-open-prs@master
         with:
           github_token: ${{ secrets.gentx }}
           skip_failed_runs: false
