--- a/.github/workflows/retrigger_workflows.yml
+++ b/.github/workflows/retrigger_workflows.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - uses: jolube/re-run-open-prs-on-base-update@master
         with:
-          github_token: ${{ secrets.gentx }}
+          github_token: ${{ secrets.GENTX }}
